--- a/changelog.txt
+++ b/changelog.txt
@@ -5,3 +5,4 @@ All notable changes to this project will be documented in this file.
 ### Added
 - Default configuration.
 - Express.
+- Connection to database.
