--- a/changelog.txt
+++ b/changelog.txt
@@ -6,3 +6,4 @@ All notable changes to this project will be documented in this file.
 - Default configuration.
 - Express.
 - Connection to database.
+- User model
