--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 # Changelog
 All notable changes to this project will be documented in this file.
 
+## [1.2.0] - 2020-08-10
+### Added
+- Default react app.
+
 ## [1.1.0] - 2020-08-10
 ### Added
 - Default configuration.
