add react routes for pages

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ All notable changes to this project will be documented in this file.
 ## [1.2.0] - 2020-08-10
 ### Added
 - Default react app.
+- Rect routes for pages.
 
 ## [1.1.0] - 2020-08-10
 ### Added
