--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ All notable changes to this project will be documented in this file.
 ### Added
 - Default react app.
 - Rect routes for pages.
+- Content of Auth page.
 
 ## [1.1.0] - 2020-08-10
 ### Added
