--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ All notable changes to this project will be documented in this file.
 - Default react app.
 - Rect routes for pages.
 - Content of Auth page.
+- Custom http hook.
 
 ## [1.1.0] - 2020-08-10
 ### Added
