--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ All notable changes to this project will be documented in this file.
 ### Added
 - Applacation context.
 - Custom authorization hook.
+- Navbar component.
 
 ## [1.2.0] - 2020-08-10
 ### Added
