--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 # Changelog
 All notable changes to this project will be documented in this file.
 
+## [2.1.0] - 2020-08-11
+### Added
+- Link model.
+
 ## [1.3.0] - 2020-08-11
 ### Added
 - Applacation context.
