--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@ All notable changes to this project will be documented in this file.
 ## [2.1.0] - 2020-08-11
 ### Added
 - Link model.
+- Link routes.
+- Auth middlewear.
 
 ## [1.3.0] - 2020-08-11
 ### Added
