--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ All notable changes to this project will be documented in this file.
 - Link model.
 - Link routes.
 - Auth middlewear.
+- Content of Create page.
 
 ## [1.3.0] - 2020-08-11
 ### Added
