--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ All notable changes to this project will be documented in this file.
 - Link routes.
 - Auth middlewear.
 - Content of Create page.
+- Loader component.
 
 ## [1.3.0] - 2020-08-11
 ### Added
