--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,8 @@ All notable changes to this project will be documented in this file.
 - Auth middlewear.
 - Content of Create page.
 - Loader component.
+- LinkCard component.
+- Content of Detail page.
 
 ## [1.3.0] - 2020-08-11
 ### Added
