--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,8 @@ All notable changes to this project will be documented in this file.
 - Loader component.
 - LinkCard component.
 - Content of Detail page.
+- LinkList component.
+- Content of Link page.
 
 ## [1.3.0] - 2020-08-11
 ### Added
