--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 # Changelog
 All notable changes to this project will be documented in this file.
 
+## [2.2.0] - 2020-08-11
+### Added
+- Redirect link route.
+
 ## [2.1.0] - 2020-08-11
 ### Added
 - Link model.
